# touschek

./: .gitignore  README.md  madx_command.madx  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  optics_tools.rst  plotting.rst  touschek.rst  touscheklib.rst
tests/: bessy3_5ba-20p_v_long-bend-tgrb.madx  test_lattice1.madx  test_lattice_B2.madx  test_lattice_MLS.madx  test_touschek.py
touschek/: __init__.py  optics_tools.py  plotting.py  prepare.py  touschek.py
touscheklib/: __init__.py  __main__.py  _version.py  optics_tools.py  plotting.py  touschek.py
