[tool.poetry]
name = "touscheklib"
version = "0.6.0"
description = ""
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
cpymad = "^1.8.1"
argparse = "^1.4.0"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
progressbar = "^2.5"
pandas = "^1.2.4"
myst-parser = "^0.15.1"
mpmath = "^1.2.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5.5"
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
