[tool.poetry]
name = "touscheklib"
version = "0.8.1"
description = ""
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cpymad = "^1.8.1"
argparse = "^1.4.0"
scipy = ">=1.8.1"
matplotlib = "^3.4.2"
progressbar = "^2.5"
pandas = "^1.2.4"
myst-parser = "^0.15.1"
mpmath = "^1.2.1"
pillow = ">=9.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
ipykernel = ">=6.17.1"
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
